# mini-trading-bot

./: CMakeLists.txt  README.md
cpp-hft-trading-bot/: CMakeLists.txt  README.md
cpp-hft-trading-bot/include/: data_structures.h  execution_engine.h  market_data.h  order_manager.h  risk_manager.h  trading_strategy.h
cpp-hft-trading-bot/src/: execution_engine.cpp  main.cpp  market_data.cpp  order_manager.cpp  risk_manager.cpp  trading_strategy.cpp
